# python-fish-sorter

./: .gitignore  FishPickerValveControl.pro  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
bioptics/: imaging.py  picking_pipette.py  zaber_controller.py
config/: zaber_config.json
config/dest_plate/: 6well_plate.json
config/hardware/: zaber_config.json
executable/: FishSorter.SED  fish_sorter.bat
fish_sorter/: TODO.txt  constants.py  logger_setup.py  paths.py  setup.py
fish_sorter/GUI/: classify.py  finding_dory.py  fish_picker.py  fish_sorter_app.py  image_gui.py  mosaic_gui.py  n-mm-launch.py  n_mm_basic.py  n_mm_launch.py  napari_points.py  nmm.py  nmm_basic.py  pick_setup_gui.py  picking.py  picking_gui.py  pipette_gui.py  pipette_test_gui.py  selection_gui.py  setup_gui.py  tester_gui.py
fish_sorter/configs/: picker_config.json  picker_defaults_config.json
fish_sorter/hardware/: dispense_plate.py  imager.py  imaging.py  imaging_plate.py  picking_pipette.py  valve_controller.py  valve_test.py  zaber_controller.py  zaber_test.py
fish_sorter/helpers/: agarose_array_postion.py  array_position.py  constants.py  conversion.py  imaging.py  imaging_plate_calibrator.py  logger.py  mapping.py  mosaic.py
hardware/: README.md
hardware/CAD/: 3-0053 SCP Pipettor L-bracket_V28.step  3-0075 Pipette holder_V1.STEP  (+2 more)
micromanager-configs/: 20240404 - LeicaDMI.cfg
python-fish-sorter/: zaber_controller.py
scripts/: parity_check.py  test.py
tests/: test_clustering.py  test_embedding_extractor.py  test_prewarm_adoption.py  test_wide_csv.py
(+37 files in other folders)
