[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fish_sorter"
version = "1.1.0"
description = "Automated Fish Picker Software - Hardware Control & Image Analysis"
readme = "README.md"
requires-python = "==3.12.*"
authors = [{ name = "CZ Biohub SF - Diane Wiener & Michelle Khoo" }]
license = { text = "BSD 3-Clause License, CERN Open Hardware Licence Version 2 - Weakly Reciprocal" }

dependencies = [
  "numpy==1.26.4",
  "scipy==1.15.1",
  "pandas==2.2.3",
  "scikit-image==0.25.1",
  "zarr==2.18.4",
  "numcodecs==0.15.0",
  "pydantic==2.10.6",
  "ome-zarr==0.10.3",
  "napari==0.5.6",
  "napari-micromanager==0.1.3",
  "napari-ome-zarr==0.6.1",
  "napari-plugin-manager==0.1.4",
  "vispy==0.14.3",
  "superqt==0.7.1",
  "psygnal==0.12.0",
  "pymmcore==11.2.1.71.0",
  "pymmcore-plus==0.13.3",
  "pymmcore-widgets==0.9.1",
  "useq-schema==0.7.0",
  "PyQt6==6.8.1",
  "PyQt6-Qt6==6.8.2",
  "PyQt6_sip==13.10.0",
  "matplotlib==3.10.0",
  "pymodbus==3.8.3",
  "tifffile==2025.1.10",
  "QtPy==2.4.2",
  "Pillow==11.1.0",
  "tqdm==4.67.1",
  "iter-tools==0.0.2",
  "zaber_motion==7.3.0",
]

[tool.setuptools.packages.find]
include = ["fish_sorter", "fish_sorter.*"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]
